--- a/docs/dg_penalty/dgpenalty.bib
+++ b/docs/dg_penalty/dgpenalty.bib
@@ -1,3 +1,23 @@
+@article{hughes2014finite,
+  title={{Finite element and NURBS approximations of eigenvalue, boundary-value, and initial-value problems}},
+  author={Hughes, Thomas JR and Evans, John A and Reali, Alessandro},
+  journal={Computer Methods in Applied Mechanics and Engineering},
+  volume={272},
+  pages={290--320},
+  year={2014},
+  publisher={North-Holland}
+}
+
+@article{ainsworth2014dispersive,
+  title={Dispersive behaviour of high order finite element schemes for the one-way wave equation},
+  author={Ainsworth, Mark},
+  journal={Journal of Computational Physics},
+  volume={259},
+  pages={1--10},
+  year={2014},
+  publisher={Elsevier}
+}
+
 @article{chan2016weight1,
   title={{Weight-adjusted discontinuous Galerkin methods: wave propagation in heterogeneous media}},
   author={Chan, Jesse and Hewett, Russell J and Warburton, T},
@@ -782,6 +802,17 @@ year={2010},
 pages={663-676}
 }
 
+@article{kopriva2014energy,
+  title={{An energy stable discontinuous Galerkin spectral element discretization for variable coefficient advection problems}},
+  author={Kopriva, David A and Gassner, Gregor J},
+  journal={SIAM Journal on Scientific Computing},
+  volume={36},
+  number={4},
+  pages={A2076--A2099},
+  year={2014},
+  publisher={SIAM}
+}
+
 @article{kopriva2010quadrature,
   title={On the quadrature and weak form choices in collocation type discontinuous Galerkin spectral element methods},
   author={Kopriva, David A and Gassner, Gregor},
@@ -1064,17 +1095,16 @@ year={1957},
 
 
 @article{Warburton20063205,
-title = "The role of the penalty in the local discontinuous Galerkin method for Maxwell's eigenvalue problem ",
-journal = "Computer Methods in Applied Mechanics and Engineering ",
-volume = "195",
-number = "25?28",
-pages = "3205 - 3223",
-year = "2006",
-note = "Discontinuous Galerkin Methods ",
+title = {{The role of the penalty in the local discontinuous Galerkin method for Maxwell's eigenvalue problem}},
+journal = {Computer Methods in Applied Mechanics and Engineering},
+volume = {195},
+number = {25-28},
+pages = {3205 - 3223},
+year = {2006},
 issn = "0045-7825",
 doi = "http://dx.doi.org/10.1016/j.cma.2005.06.011",
 url = "http://www.sciencedirect.com/science/article/pii/S0045782505002665",
-author = "T. Warburton and Mark Embree",
+author = {Warburton, T. and Embree, Mark},
 }
 
 @phdthesis{warburton1999spectral,
