--- a/docs/dg_penalty/main.tex
+++ b/docs/dg_penalty/main.tex
@@ -53,186 +53,8 @@ legend style={font=\small}
 }
 
 \usetikzlibrary{calc}
+\usepackage{stmaryrd}
 
-%%% START MACRO FOR ANNOTATION OF TRIANGLE WITH SLOPE %%%.
-\newcommand{\logLogSlopeTriangle}[5]
-{
-    % #1. Relative offset in x direction.
-    % #2. Width in x direction, so xA-xB.
-    % #3. Relative offset in y direction.
-    % #4. Slope d(y)/d(log10(x)).
-    % #5. Plot options.
-
-    \pgfplotsextra
-    {
-        \pgfkeysgetvalue{/pgfplots/xmin}{\xmin}
-        \pgfkeysgetvalue{/pgfplots/xmax}{\xmax}
-        \pgfkeysgetvalue{/pgfplots/ymin}{\ymin}
-        \pgfkeysgetvalue{/pgfplots/ymax}{\ymax}
-
-        % Calculate auxilliary quantities, in relative sense.
-        \pgfmathsetmacro{\xArel}{#1}
-        \pgfmathsetmacro{\yArel}{#3}
-        \pgfmathsetmacro{\xBrel}{#1-#2}
-        \pgfmathsetmacro{\yBrel}{\yArel}
-        \pgfmathsetmacro{\xCrel}{\xArel}
-
-        \pgfmathsetmacro{\lnxB}{\xmin*(1-(#1-#2))+\xmax*(#1-#2)} % in [xmin,xmax].
-        \pgfmathsetmacro{\lnxA}{\xmin*(1-#1)+\xmax*#1} % in [xmin,xmax].
-        \pgfmathsetmacro{\lnyA}{\ymin*(1-#3)+\ymax*#3} % in [ymin,ymax].
-        \pgfmathsetmacro{\lnyC}{\lnyA+#4*(\lnxA-\lnxB)}
-        \pgfmathsetmacro{\yCrel}{\lnyC-\ymin)/(\ymax-\ymin)} % THE IMPROVED EXPRESSION WITHOUT 'DIMENSION TOO LARGE' ERROR.
-
-        % Define coordinates for \draw. MIND THE 'rel axis cs' as opposed to the 'axis cs'.
-        \coordinate (A) at (rel axis cs:\xArel,\yArel);
-        \coordinate (B) at (rel axis cs:\xBrel,\yBrel);
-        \coordinate (C) at (rel axis cs:\xCrel,\yCrel);
-
-        % Draw slope triangle.
-        \draw[#5]   (A)-- node[pos=0.5,anchor=north] {1}
-                    (B)-- 
-                    (C)-- node[pos=0.5,anchor=west] {#4}
-                    cycle;
-    }
-}
-%%% END MACRO FOR ANNOTATION OF TRIANGLE WITH SLOPE %%%.
-
-\newcommand{\logLogSlopeTriangleNeg}[5]
-{
-    % #1. Relative offset in x direction.
-    % #2. Width in x direction, so xA-xB.
-    % #3. Relative offset in y direction.
-    % #4. Slope d(y)/d(log10(x)).
-    % #5. Plot options.
-
-    \pgfplotsextra
-    {
-        \pgfkeysgetvalue{/pgfplots/xmin}{\xmin}
-        \pgfkeysgetvalue{/pgfplots/xmax}{\xmax}
-        \pgfkeysgetvalue{/pgfplots/ymin}{\ymin}
-        \pgfkeysgetvalue{/pgfplots/ymax}{\ymax}
-
-        % Calculate auxilliary quantities, in relative sense.
-        \pgfmathsetmacro{\xArel}{#1}
-        \pgfmathsetmacro{\yArel}{#3}
-        \pgfmathsetmacro{\xBrel}{#1-#2}
-        \pgfmathsetmacro{\yBrel}{\yArel}
-        \pgfmathsetmacro{\xCrel}{\xArel}
-
-        \pgfmathsetmacro{\lnxB}{\xmin*(1-(#1-#2))+\xmax*(#1-#2)} % in [xmin,xmax].
-        \pgfmathsetmacro{\lnxA}{\xmin*(1-#1)+\xmax*#1} % in [xmin,xmax].
-        \pgfmathsetmacro{\lnyA}{\ymin*(1-#3)+\ymax*#3} % in [ymin,ymax].
-        \pgfmathsetmacro{\lnyC}{\lnyA+#4*(\lnxA-\lnxB)}
-        \pgfmathsetmacro{\yCrel}{\lnyC-\ymin)/(\ymax-\ymin)} % THE IMPROVED EXPRESSION WITHOUT 'DIMENSION TOO LARGE' ERROR.
-
-        % Define coordinates for \draw. MIND THE 'rel axis cs' as opposed to the 'axis cs'.
-        \coordinate (A) at (rel axis cs:\xArel,\yArel);
-        \coordinate (B) at (rel axis cs:\xBrel,\yBrel);
-        \coordinate (C) at (rel axis cs:\xCrel,\yCrel);
-
-        % Draw slope triangle.
-        \draw[#5]   (A)-- node[pos=.5,anchor=south] {1}
-                    (B)-- 
-                    (C)-- node[pos=0.5,anchor=west] {#4}
-                    cycle;
-    }
-}
-%%% END MACRO FOR ANNOTATION OF TRIANGLE WITH SLOPE %%%.
-
-%%% START MACRO FOR ANNOTATION OF TRIANGLE WITH SLOPE %%%.
-\newcommand{\logLogSlopeTriangleFlipNeg}[5]
-{
-    % #1. Relative offset in x direction.
-    % #2. Width in x direction, so xA-xB.
-    % #3. Relative offset in y direction.
-    % #4. Slope d(y)/d(log10(x)).
-    % #5. Plot options.
-
-    \pgfplotsextra
-    {
-        \pgfkeysgetvalue{/pgfplots/xmin}{\xmin}
-        \pgfkeysgetvalue{/pgfplots/xmax}{\xmax}
-        \pgfkeysgetvalue{/pgfplots/ymin}{\ymin}
-        \pgfkeysgetvalue{/pgfplots/ymax}{\ymax}
-
-        % Calculate auxilliary quantities, in relative sense.
-        %\pgfmathsetmacro{\xArel}{#1}
-        %\pgfmathsetmacro{\yArel}{#3}
-        \pgfmathsetmacro{\xBrel}{#1-#2}
-        \pgfmathsetmacro{\yBrel}{#3}
-        \pgfmathsetmacro{\xCrel}{#1}
-
-        \pgfmathsetmacro{\lnxB}{\xmin*(1-(#1-#2))+\xmax*(#1-#2)} % in [xmin,xmax].
-        \pgfmathsetmacro{\lnxA}{\xmin*(1-#1)+\xmax*#1} % in [xmin,xmax].
-        \pgfmathsetmacro{\lnyA}{\ymin*(1-#3)+\ymax*#3} % in [ymin,ymax].
-        \pgfmathsetmacro{\lnyC}{\lnyA+#4*(\lnxA-\lnxB)}
-        \pgfmathsetmacro{\yCrel}{\lnyC-\ymin)/(\ymax-\ymin)} % THE IMPROVED EXPRESSION WITHOUT 'DIMENSION TOO LARGE' ERROR.
-
-	\pgfmathsetmacro{\xArel}{\xBrel}
-        \pgfmathsetmacro{\yArel}{\yCrel}
-
-        % Define coordinates for \draw. MIND THE 'rel axis cs' as opposed to the 'axis cs'.
-        \coordinate (A) at (rel axis cs:\xArel,\yArel);
-        \coordinate (B) at (rel axis cs:\xBrel,\yBrel);
-        \coordinate (C) at (rel axis cs:\xCrel,\yCrel);
-
-        % Draw slope triangle.
-        \draw[#5]   (A)-- node[pos=0.5,anchor=east] {#4}
-                    (B)-- 
-                    (C)-- node[pos=0.5,anchor=north] {1}
-                    cycle;
-    }
-}
-%%% END MACRO FOR ANNOTATION OF TRIANGLE WITH SLOPE %%%.
-
-
-%%% START MACRO FOR ANNOTATION OF TRIANGLE WITH SLOPE %%%.
-\newcommand{\logLogSlopeTriangleFlip}[5]
-{
-    % #1. Relative offset in x direction.
-    % #2. Width in x direction, so xA-xB.
-    % #3. Relative offset in y direction.
-    % #4. Slope d(y)/d(log10(x)).
-    % #5. Plot options.
-
-    \pgfplotsextra
-    {
-        \pgfkeysgetvalue{/pgfplots/xmin}{\xmin}
-        \pgfkeysgetvalue{/pgfplots/xmax}{\xmax}
-        \pgfkeysgetvalue{/pgfplots/ymin}{\ymin}
-        \pgfkeysgetvalue{/pgfplots/ymax}{\ymax}
-
-        % Calculate auxilliary quantities, in relative sense.
-        %\pgfmathsetmacro{\xArel}{#1}
-        %\pgfmathsetmacro{\yArel}{#3}
-        \pgfmathsetmacro{\xBrel}{#1-#2}
-        \pgfmathsetmacro{\yBrel}{#3}
-        \pgfmathsetmacro{\xCrel}{#1}
-
-        \pgfmathsetmacro{\lnxB}{\xmin*(1-(#1-#2))+\xmax*(#1-#2)} % in [xmin,xmax].
-        \pgfmathsetmacro{\lnxA}{\xmin*(1-#1)+\xmax*#1} % in [xmin,xmax].
-        \pgfmathsetmacro{\lnyA}{\ymin*(1-#3)+\ymax*#3} % in [ymin,ymax].
-        \pgfmathsetmacro{\lnyC}{\lnyA+#4*(\lnxA-\lnxB)}
-        \pgfmathsetmacro{\yCrel}{\lnyC-\ymin)/(\ymax-\ymin)} % THE IMPROVED EXPRESSION WITHOUT 'DIMENSION TOO LARGE' ERROR.
-
-	\pgfmathsetmacro{\xArel}{\xBrel}
-        \pgfmathsetmacro{\yArel}{\yCrel}
-
-        % Define coordinates for \draw. MIND THE 'rel axis cs' as opposed to the 'axis cs'.
-        \coordinate (A) at (rel axis cs:\xArel,\yArel);
-        \coordinate (B) at (rel axis cs:\xBrel,\yBrel);
-        \coordinate (C) at (rel axis cs:\xCrel,\yCrel);
-
-        % Draw slope triangle.
-        \draw[#5]   (A)-- node[pos=0.5,anchor=east] {#4}
-                    (B)-- 
-                    (C)-- node[pos=0.5,anchor=south] {1}
-                    cycle;
-    }
-}
-%%% END MACRO FOR ANNOTATION OF TRIANGLE WITH SLOPE %%%.
-
-%% ====================================== macros
 
 \renewcommand{\topfraction}{0.85}
 \renewcommand{\textfraction}{0.1}
@@ -278,7 +100,7 @@ legend style={font=\small}
 \newcommand{\Grad} {\ensuremath{\nabla}}
 \newcommand{\Div} {\ensuremath{\nabla\cdot}}
 \newcommand{\Nel} {\ensuremath{{N^\text{el}}}}
-\newcommand{\jump}[1] {\ensuremath{\LRs{\![#1]\!}}}
+\newcommand{\jump}[1] {\ensuremath{\llbracket#1\rrbracket}}
 \newcommand{\avg}[1] {\ensuremath{\LRc{\!\{#1\}\!}}}
 \newcommand{\uh}{\widehat{u}}
 \newcommand{\Bh}{\widehat{B}}
@@ -385,8 +207,8 @@ legend style={font=\small}
 \newcommand{\squareface}{[-1,1]^2}
 
 \date{}
-\author{Jesse Chan}
-\title{On the penalty parameter in first order DG formulations}
+\author{Jesse Chan, T. Warburton}
+\title{On penalty flux parameters in first order DG formulations}
 
 \begin{document}
 
@@ -411,24 +233,29 @@ which may alternatively be written as
 \]
 where $\bm{A}_{i}$ are symmetric matrices.  The semi-discrete DG formulation for such systems may be written as 
 \[
-\sum_{D^k \in \Oh} \LRp{\bm{A}_0\pd{\bm{U}}{t},\bm{V} }_{\Lk} = \sum_{D^k \in \Oh}\LRp{ \LRp{\bm{F}_i(\bm{U}), \bm{V}_{,i}}_{\Lk} - \LRa{\bm{F}_i^*(\bm{U})\bm{n}_i,\bm{V}}_{\partial D^k}}
+\sum_{D^k \in \Oh} \LRp{\bm{A}_0\pd{\bm{U}}{t},\bm{V} }_{\Lk} = \sum_{D^k \in \Oh}\LRp{ \LRp{\bm{F}_i(\bm{U}), \bm{V}_{,i}}_{\Lk} - \LRa{\bm{F}_n^*(\bm{U})\bm{n}_i,\bm{V}}_{\partial D^k}}
 \]
-where $\bm{n}$ is the outward normal on a face $f$ of $D^k$, and $\bm{F^*}$ is a numerical flux depending defined on shared faces between two elements.  
+where $\bm{n}$ is the outward normal on a face $f$ of $D^k$, and $\bm{F^*}_n$ is a numerical flux depending defined on shared faces between two elements.  
 
-For convergence, $\bm{F^*} = \bm{F^*}(\bm{U})$ must be consistent such that, for exact solutions $\bm{U}$, 
+%For convergence, $\bm{F^*}_n = \bm{F^*}_n(\bm{U})$ must be consistent such that, for exact solutions $\bm{U}$, 
+%\[
+%\bm{F^*}_n = \bm{F}(\bm{U})\cdot \bm{n}.
+%\]
+
+Let $f$ be a shared face between two elements $D^{k,+}$ and $D^{k,-}$, and let $\bm{F}^+, \bm{F}^-$ be evaluations of $\bm{F}(\bm{U})$ restricted to $D^{k,+}$ and $D^{k,-}$, respectively.  The average and jump of a vector valued function over $f$ are then defined as
 \[
-\bm{F^*} = \bm{F}(\bm{U}).
+\avg{\bm{F}} = \frac{\bm{F}^+ + \bm{F}^-}{2}, \qquad \jump{\bm{F}} = \bm{F}^+ - \bm{F}^-.
 \]
-Let $f$ be a shared face between two elements $D^{k,+}$ and $D^{k,-}$, and let $\bm{F}^+, \bm{F}^-$ be evaluations of $\bm{F}(\bm{U})$ restricted to $D^{k,+}$ and $D^{k,-}$, respectively.  Typical DG fluxes are defined as the sum of a consistent averaging of $\bm{F}^+$ and $\bm{F}^-$ and a penalization term
+Typical numerical fluxes are defined as the sum of the average of $\bm{F}^+$ and $\bm{F}^-$ and a penalization term
 \begin{equation}
-\bm{F^*} = \avg{\bm{F}_n(\bm{U})} - \bm{W}\jump{\bm{U}},
+\bm{F^*}_n = \avg{\bm{F}(\bm{U})}\cdot \bm{n} - \bm{G}\LRp{\jump{\bm{U}}},
 \label{eq:flux}
 \end{equation}
-where $\bm{W}$ is some positive-definite matrix, which is required for energy stability.  
+where $\bm{G}$ is some convex function.  
 
-The upwind numerical flux is a well-known flux of the form (\ref{eq:flux}).  For some normal vector $\bm{n}$, let $\jump{\bm{A}_n} = \sum_{i=1}^d \jump{\bm{A}_i\bm{n}_i}$.  By \note{add citation}, $\jump{\bm{A}_n}$ contains real eigenvalues, and admits an eigenvalue decomposition
+The upwind numerical flux is a well-known flux of the form (\ref{eq:flux}).  For some normal vector $\bm{n}$, let ${\bm{A}}_n = \sum_{i=1}^d {\bm{A}_i\bm{n}_i}$.  By \note{add citation}, ${\bm{A}}_n$ contains real eigenvalues, and admits an eigenvalue decomposition
 \[
-\jump{\bm{A}_n} = \bm{V}{\bm{\Lambda}}\bm{V}^{-1}, \qquad \bm{\Lambda} = 
+\bm{A}_n = \bm{V}{\bm{\Lambda}}\bm{V}^{-1}, \qquad \bm{\Lambda} = 
 \left(\begin{array}{ccc}
 \lambda_1 & & \\
 & \ddots & \\
@@ -437,25 +264,33 @@ The upwind numerical flux is a well-known flux of the form (\ref{eq:flux}).  For
 \]
 For problems with continuous coefficients, the upwind numerical flux can be defined as
 \[
-\bm{F^*} = \bm{A}^+\bm{U}^- + \bm{A}^- \bm{U}^+,
+\bm{F^*}_n = \bm{A}_n^+\bm{U}^- + \bm{A_n}^- \bm{U}^+,
 \]
-where the matrices $\bm{A}^+,\bm{A}^-$ are constructed from the positive and negative eigenvalues 
+where the matrices $\bm{A_n}^+,\bm{A_n}^-$ are constructed from the positive and negative eigenvalues 
 \begin{align*}
-\bm{A}^+ &= \frac{1}{2}\bm{V} \LRp{\bm{\Lambda} + \LRb{\bm{\Lambda}}} \bm{V}^{-1}\\
-\bm{A}^- &= \frac{1}{2}\bm{V} \LRp{\bm{\Lambda} - \LRb{\bm{\Lambda}}} \bm{V}^{-1},
+\bm{A}_n^+ &= \frac{1}{2}\bm{V} \LRp{\bm{\Lambda} + \LRb{\bm{\Lambda}}} \bm{V}^{-1}\\
+\bm{A}_n^- &= \frac{1}{2}\bm{V} \LRp{\bm{\Lambda} - \LRb{\bm{\Lambda}}} \bm{V}^{-1},
 \end{align*}
-and $\LRb{\Lambda}$ is the diagonal matrix whose entries consist of the absolute values of the eigenvalues $\LRb{\lambda_i}$.  This can be rewritten as
+and $\LRb{\bm{\Lambda}}$ is the diagonal matrix whose entries consist of the absolute values of the eigenvalues $\LRb{\lambda_i}$.  This can be rewritten as the sum of the central flux and a penalization
 \[
-\bm{F^*} = \avg{\bm{A}\bm{U}} - \bm{V}\LRb{\bm{\Lambda}}\bm{V}^{-1} \jump{\bm{U}}.  
+\bm{F^*}_n = \avg{\bm{A}_n\bm{U}} - \tau\bm{V}\LRb{\bm{\Lambda}}\bm{V}^{-1} \jump{\bm{U}}.  
+\]
+For problems with discontinuous coefficients, this may be generalized by solving a Riemann problem to yield
+\[
+\bm{F^*}_n = \avg{\bm{A}_n\bm{U}} - \tau \jump{{\bm{V}\LRb{\bm{\Lambda}}\bm{V}^{-1}\bm{U}}}.  
 \]
 
-An alternative to upwind fluxes are penalty fluxes, which penalize appropriately defined jumps of the solution.  One such penalty flux is given as
-\[
-\bm{F^*} = \avg{\bm{A}\bm{U}} - \bm{A}^T \bm{W} \jump{\bm{A}\bm{U}}.  
-\]
-where $\bm{W}$ is some positive-definite weighting matrix.  In contrast to Lax-Friedrichs fluxes, the penalty flux enforce a weaker continuity.  
 
-\subsection{Example: acoustic wave equation}
+An alternative to upwind fluxes are penalty fluxes, which penalize appropriately defined jumps of the solution.  One such penalty flux is 
+\[
+\bm{F^*}_n = \avg{\bm{A}_n\bm{U}} - \bm{A}_n^T \bm{W} \jump{\bm{A}_n\bm{U}}.  
+\]
+where $\bm{W}$ is a diagonal weighting matrix with positive entries.  We take $\bm{W} = \tau \bm{I}$ in the following sections; however, the entries can be made to vary.  For example, taking $\bm{W} = \LRb{\bm{\Lambda}}^{-1}$ recovers the upwind fluxes \note{prove this}.
+%\[
+%\bm{F^*}_n = \avg{\bm{A}_n\bm{U}} - \bm{A}_n^T \LRb{\bm{Lambda}}^{-1} \jump{\bm{A}_n\bm{U}}.  
+%\]
+
+\subsection{Examples: acoustic wave equation}
 
 Consider the isotropic acoustic wave equation in pressure-velocity form
 \begin{align*}
@@ -491,7 +326,7 @@ The normal flux matrix $\bm{A}_n$ is then
 \]
 implying that the penalty fluxes (with $\bm{W} = \tau\bm{I}$) are 
 \[
-\avg{\bm{A}_n \bm{U}} - \bm{A}_n^T \jump{\bm{A}_n\bm{U}} = \left(\begin{array}{c}
+\avg{\bm{A}_n \bm{U}} - \tau\bm{A}_n^T \jump{\bm{A}_n\bm{U}} = \left(\begin{array}{c}
 \avg{\bm{u}_n}\\
 \avg{p }\bm{n}_x\\
 \avg{p }\bm{n}_y
@@ -504,20 +339,37 @@ implying that the penalty fluxes (with $\bm{W} = \tau\bm{I}$) are
 \end{array}
 \right)
 \]
-For $\tau = 1$, these fluxes coincide with the upwind fluxes.  
+For $\tau = 1$, these fluxes coincide with the upwind fluxes for isotropic media.  We note that the penalty flux affects only the normal component of the velocity; this is in contrast to Lax-Friedrichs-type fluxes, which penalize component-wise discontinuities in the velocity.  
+
+\note{Skew-symmetric discretization for constant coefficient problems \cite{kopriva2014energy}.  For wave propagation, can wrap variable coefficients into $A_0$ \cite{chan2016weight1,chan2016weight2}}.  
 
 \section{Dependence of spectra on the penalty parameter}
 
-\note{Reproduce Gershgorin proof here.}
-We split the DG approximation space into conforming and non-conforming parts, which induces a block matrix
+\note{Define spaces and show that $\bm{S}$ is symmetric definite based on DG discretization.}  
+
+We adapt the proof presented in \cite{Warburton20063205} to show that the spectra of $\bm{K}$ splits into two sets as $\tau\rightarrow \infty$, the first of which approaches the eigenvalues of $\bm{A}$, and the second of which moves left of the imaginary axis at a rate of $O(\tau)$.  
+
+We begin by splitting the DG approximation space into a conforming part $V^C$ and a non-conforming part $V^{NC}$.  Let $V$ be the DG approximation space
+\[
+V = \LRc{ u \in L^2(\Oh) : \left.u\right|_{D^k} \in P^N(D^k)}.  
+\]
+The conforming space $V^{C}$ is then defined as
+\begin{equation}
+V^{C} = \LRc{ u(\bm{x}) \in V: }
+\label{eq:conf}
+\end{equation}
+We can similarly define the non-conforming approximation space $V^{NC}$ as the orthogonal complement of $V^{C}$, such that the full approximation space $V$ is 
+\[
+V = V^C \oplus V^{NC}.  
+\]
+
+This induces a block decomposition
 \[
 \bm{K} = \left(\begin{array}{cc}
 \bm{A} & \bm{B}\\
 -\bm{B}^T & \bm{C} + \tau \bm{S}
 \end{array}\right).
 \]
-We will adapt the proof presented in \cite{Warburton20063205} to show that the spectra of $\bm{K}$ splits into two sets as $\tau\rightarrow \infty$, the first of which approaches the eigenvalues of $\bm{A}$, and the second of which moves left of the imaginary axis at a rate of $O(\tau)$.  
-
 We first consider the spectra of $\bm{C} + \tau\bm{S}$.  By the construction of the DG formulation $\bm{C}$ is skew-symmetric, while $\bm{S}$ is symmetric and negative-definite.  Let $\lambda, \bm{u}$ be an eigenpair of $\bm{C} + \tau{\bm{S}}$ corresponding to the largest $N^D$ eigenvalues. Let $\lambda = \alpha + i\beta$ and $\bm{u} = \bm{v} + i\bm{w}$, where $\alpha,\beta$ and $\bm{v},\bm{w}$ are the real and imaginary parts of $\lambda$ and $\bm{u}$, respectively.  Then, expanding and grouping terms in
 \[
 (\bm{C}+\tau\bm{S})(\bm{v} + i\bm{w}) = (\alpha + i\beta) (\bm{v} + i\bm{w})
@@ -547,9 +399,7 @@ Since $\bm{v}^T\bm{C}\bm{w} - \bm{w}^T\bm{C}\bm{w}= 2\bm{w}^T\bm{C}\bm{v} = \bet
 \]
 is bounded independently of $\tau$, and we conclude that $\LRb{\alpha} = O(\tau)$.  Thus, as $\tau$ increases, the eigenvalues of $\bm{C} + \tau\bm{S}$ are shifted further and further left of the imaginary axis.  
 
-\subsection{Bifurcation of eigenvalue sets}
-
-Following \cite{Warburton20063205}, let $\bm{U}$ and $\bm{Q}$ be unitary matrices whose columns contain the eigenvectors of $\bm{A}$ and $\bm{C} + \tau \bm{S}$, respectively.  Then, applying a block diagonal similarity transform yields
+We may now show how the spectra of $\bm{K}$ behaves as $\tau \rightarrow \infty$.  Following \cite{Warburton20063205}, let $\bm{U}$ and $\bm{Q}$ be unitary matrices whose columns contain the eigenvectors of $\bm{A}$ and $\bm{C} + \tau \bm{S}$, respectively.  Then, applying a block diagonal similarity transform yields
 \[
 \left(\begin{array}{cc}
 \bm{U}^* & \\
@@ -570,7 +420,7 @@ Following \cite{Warburton20063205}, let $\bm{U}$ and $\bm{Q}$ be unitary matrice
 \]
 where $\bm{\Lambda}_C,\bm{\Lambda}_D$ are diagonal matrices whose entries consist of eigenvalues of $\bm{A},\bm{C} + \tau\bm{S}$, respectively.  Since $\bm{B}$ is independent of $\tau$, $\nor{\bm{U}^T\bm{B}\bm{Q}}$ can be bounded independently of $\tau$, assuming that $\bm{U}$ and $\bm{Q}$ are normalized.  Gerschgorin's theorem applied to $\bm{\Lambda}_C,\bm{\Lambda}_D$ then implies that the eigenvalues of $\bm{K}$ are contained in two sets of discs with radii independent of $\tau$.  The first set of discs are centered around $\lambda^C_i$ for $i = 1,\ldots,N^C$, while the second set of discs are centered around $\lambda^D_i$ for $i = 1,\ldots,N^D$, where ${\rm Re}(\lambda^D_i) = O(\tau)$. 
 
-Consider now the $N^C$ eigenvalues with the smallest magnitude.  By the Gerschgorin argument, these must remain bounded as $\tau \rightarrow \infty$.  Let $\bm{W} = (\bm{W}_C,\bm{W}_D)$ and $\Lambda_C$ be the matrix of eigenvectors and eigenvalues corresponding to these $N^C$ smallest eigenvalues, such that
+Consider now the $N^C$ eigenvalues with the smallest magnitude.  By the Gerschgorin argument, these must remain bounded as $\tau \rightarrow \infty$.  Let $\bm{W} = (\bm{W}_C,\bm{W}_D)$ and $\bm{\Lambda}_C$ be the matrix of eigenvectors and eigenvalues corresponding to these $N^C$ smallest eigenvalues, such that
 \[
 \left(\begin{array}{cc}
 \bm{A} & \bm{B}\\
@@ -597,17 +447,126 @@ This implies
 \[
 \tau \nor{\bm{S}\bm{W}_D} = \nor{\bm{\Lambda}_C \bm{W}_D + \bm{B}^T\bm{W}_C  - \bm{C}\bm{W}_D}.
 \]
-Since $\Lambda_C$ remains bounded as $\tau\rightarrow \infty$, the right hand side is bounded independently of $\tau$ under normalization of $\bm{W}_C,\bm{W}_D$, and we conclude that the non-conforming 
+Since $\Lambda_C$ remains bounded as $\tau\rightarrow \infty$, the right hand side is bounded independently of $\tau$ under normalization of $\bm{W}_C,\bm{W}_D$, implying that the non-conforming component $\bm{W}^D$ satisfies
 \[
-\nor{\bm{S}\bm{W}_D} = O(1/\tau).
+C\nor{\bm{W}_D} \leq \nor{\bm{S}\bm{W}_D} = O(1/\tau).
 \]
-As a consequence, as $\tau\rightarrow \infty$, the smallest $N^C$ eigenvalues of $\bm{K}$ converge to the purely imaginary eigenvalues of $\bm{A}$.  These correspond to a discretization using a conforming approximation space.  
- 
+As a consequence, $\bm{W}_D \rightarrow 0$ as $\tau\rightarrow \infty$, and the smallest $N^C$ eigenvalues of $\bm{K}$ converge to the purely imaginary eigenvalues of $\bm{A}$ at a rate of $O(1/\tau)$.  These correspond to a discretization using the conforming approximation space (\ref{eq:conf}).
+
 \section{Numerical experiments}
 
+The above analysis illustrates the behavior of the spectra of the DG discretization for the asymptotic cases when $\tau = 0$ or $\tau \rightarrow \infty$.  However, it is less clear how the spectra of $\bm{K}$ behaves for $\tau = O(1)$.  We rely instead on numerical experiments in one and two space dimensions to illustrate behaviors for the advection and acoustic wave equations.  
+
+\subsection{1D experiments}
+
+We consider first the scalar advection equation in 1D with periodic boundary conditions.  For $\tau = 0$, the eigenvalues of the DG discretization matrix are purely imaginary.  Figure~\ref{fig:track1D} shows the paths taken by these eigenvalues as $\tau$ increases from zero to $\tau = 4$.  As predicted, a subset of eigenvalues diverges towards the left half plane, which we refer to as \emph{divergent}.  The corresponding eigenmodes are shown in Figure~\ref{fig:trackmodes1D}, with inter-element jumps of these eigenfunctions increasing as $\tau$ increases.  
+
+\begin{figure}
+\centering
+\subfloat[Paths of eigenvalues as $\tau$ increases]{\includegraphics[width=.46\textwidth]{figs/trackedEigs.png}}
+\hspace{1em}
+\subfloat[Zoom of eigenvalues near imaginary axis]{\includegraphics[width=.44\textwidth]{figs/trackedEigsZoom.png}}
+\caption{Eigenvalue paths for DG advection with $\tau \in [0,4]$ on a mesh of 8 elements of degree $N=3$.  Eigenvalues are overlaid on these paths for $\tau = 0$, $\tau = 1$, and $\tau = 4$.  The zoomed in view near the imaginary axis shows the return of spurious modes to the imaginary axis for $\tau$ sufficiently large. }
+\label{fig:track1D}
+\end{figure}
+
+\begin{figure}
+\centering
+\subfloat{\includegraphics[width=.32\textwidth]{figs/tauEigsDiverge1.png}}
+\hspace{.5em}
+\subfloat{\includegraphics[width=.32\textwidth]{figs/tauEigsDiverge2.png}}
+\hspace{.5em}
+\subfloat{\includegraphics[width=.32\textwidth]{figs/tauEigsDiverge3.png}}\\
+\subfloat[$\tau = 0$]{\includegraphics[width=.32\textwidth]{figs/tauModesDiverge1.png}}
+\hspace{.5em}
+\subfloat[$\tau = 1$]{\includegraphics[width=.32\textwidth]{figs/tauModesDiverge2.png}}
+\hspace{.5em}
+\subfloat[$\tau = 10$]{\includegraphics[width=.32\textwidth]{figs/tauModesDiverge3.png}}
+\caption{Behavior of divergent eigenvalues for advection as $\tau$ increases.  The order of approximation is $N=3$ on a mesh of 4 elements.} %The displayed eigenfunctions correspond to the highlighted eigenvalue.  }
+\label{fig:trackmodes1D}
+\end{figure}
+
+However, for sufficiently large $\tau$, a subset of eigenvalues return to the imaginary axis.  Figure~\ref{fig:spurious} illustrates that, as $\tau$ increases, the magnitude of the inter-element jumps present in these modes decreases, and the mode approaches a continuous function.  These eigenvalues which return to the imaginary axis correspond to a second set of \emph{spurious} modes, consisting of higher frequency components with sharp peaks, which have previously been observed in high order $C^0$ finite element methods \cite{ainsworth2014dispersive,hughes2014finite}.  
+
+\begin{figure}
+\centering
+\subfloat{\includegraphics[width=.32\textwidth]{figs/tauEigs1.png}}
+\hspace{.5em}
+\subfloat{\includegraphics[width=.32\textwidth]{figs/tauEigs2.png}}
+\hspace{.5em}
+\subfloat{\includegraphics[width=.32\textwidth]{figs/tauEigs3.png}}\\
+\subfloat[$\tau = 0$]{\includegraphics[width=.32\textwidth]{figs/tauModes1.png}}
+\hspace{.5em}
+\subfloat[$\tau = 1$]{\includegraphics[width=.32\textwidth]{figs/tauModes2.png}}
+\hspace{.5em}
+\subfloat[$\tau = 10$]{\includegraphics[width=.32\textwidth]{figs/tauModes3.png}}
+\caption{Return behavior of DG advection eigenvalues for sufficiently large $\tau$.  For $\tau = 1$ certain eigenvalues have negative real part, and the corresponding eigenmodes are damped.  For $\tau \gg 1$, certain eigenvalues return to the imaginary axis as spurious modes in conforming discretizations. }
+\label{fig:spurious}
+\end{figure}
+
+We repeat the above experiment for the acoustic wave equation in 1D with reflection boundary conditions on $[-1,1]$, and compare against the exact eigenvalues $\lambda_i = i \frac{\pi}{2}$ for $i = 1,2,\ldots$.  The behavior of the eigenvalues as $\tau$ increases (Figure~\ref{fig:trackModesWave}) is similar to the behavior observed for the scalar advection equation.  An examination of the eigenmodes corresponding to divergent and spurious eigenvalues as $\tau \rightarrow \infty$ shows that these modes behave similarly to the spurious modes observed for the scalar advection equation, with individual pressure and velocity components converging to continuous functions.    
+
+%\begin{figure}
+%\centering
+%\subfloat{\includegraphics[width=.475\textwidth]{figs/tauEigs1.png}}
+%\hspace{.5em}
+%\subfloat{\includegraphics[width=.475\textwidth]{figs/tauEigs2.png}}
+%\caption{ }
+%\label{fig:trackModesWave}
+%\end{figure}
+
+\subsection{2D experiments}
+
+In two space dimensions, taking $\tau\rightarrow \infty$ again results in spurious modes which return to the imaginary axis.  The corresponding eigenvalues converge to conforming functions.  For the acoustic wave equation, $p$ is continuous across faces, edges, and vertices, implying that $p\in H^1(\Oh)$, while only the normal component of $\bm{u}$ is continuous across faces, implying that $\bm{u} \in H({\rm div}; \Oh)$.  
+
+Uniform triangular mesh resulting from bisecting each element of a $2\times 2$ uniform quadrilateral mesh.  
+%For the advection equation, 
+%\begin{figure}
+%\centering
+%\subfloat{\includegraphics[width=.475\textwidth]{figs/trackedAdvecEigs.png}}
+%\hspace{.5em}
+%\subfloat{\includegraphics[width=.465\textwidth]{figs/trackedAdvecEigsZoom1.png}}
+%\caption{Behavior of eigenvalues for advection }
+%\label{fig:trackModesAdvec}
+%\end{figure}
+
+
+\begin{figure}
+\centering
+\subfloat[$\tau = 1$]{\includegraphics[width=.3\textwidth]{figs/waveEigs1.png}}
+\hspace{.5em}
+\subfloat[$\tau = 10$]{\includegraphics[width=.3\textwidth]{figs/waveEigs2.png}}
+\hspace{.5em}
+\subfloat[$\tau = 100$]{\includegraphics[width=.3\textwidth]{figs/waveEigs3.png}}
+\caption{Behavior of eigenvalues for the acoustic wave equation in two dimensions. Note the changing scale of the real axis.}
+\label{fig:waveeigs}
+\end{figure}
+
+
+\begin{figure}
+\centering
+\subfloat[$\tau = 0,1, 50$, zoomed in view]{\includegraphics[height=.3\textheight]{figs/waveEigs2Dbox.png}}
+\hspace{2em}
+\subfloat[$\tau= 0,1,50$, returning eigenvalue paths]{\includegraphics[height=.3\textheight]{figs/trackedWaveEigs2D.png}}
+\caption{Behavior of eigenvalues for the acoustic wave equation in two dimensions.  Divergent eigenvalues in the far left half plane are not shown.  }
+\label{fig:trackEigsWave}
+\end{figure}
+
+
+\begin{figure}
+\centering
+\subfloat[$\tau = .1$, $\lambda = -0.2379 + 8.7528i$]{\includegraphics[width=.3\textwidth]{figs/waveEig2D_p1.png}}
+\hspace{.5em}
+\subfloat[$\tau = 1$, $\lambda = -1.0145 + 8.9270i$]{\includegraphics[width=.3\textwidth]{figs/waveEig2D_p2.png}}
+\hspace{.5em}
+\subfloat[$\tau = 50$, $\lambda = -0.0437 + 7.6167i$]{\includegraphics[width=.3\textwidth]{figs/waveEig2D_p3.png}}
+\caption{Behavior of spurious returning modes for the acoustic wave equation in two dimensions.  }
+\label{fig:trackModesWave}
+\end{figure}
 
 
 
+\section{Conclusions}
 
 \bibliographystyle{unsrt}
 \bibliography{dgpenalty}
