updating note with more

--- a/docs/dg_penalty/dgpenalty.bib
+++ b/docs/dg_penalty/dgpenalty.bib
@@ -1,3 +1,50 @@
+@article{kirby2004algorithm,
+  title={{Algorithm 839: FIAT, a new paradigm for computing finite element basis functions}},
+  author={Kirby, Robert C},
+  journal={ACM Transactions on Mathematical Software (TOMS)},
+  volume={30},
+  number={4},
+  pages={502--516},
+  year={2004},
+  publisher={ACM}
+}
+
+@book{boffi2013mixed,
+  title={Mixed finite element methods and applications},
+  author={Boffi, Daniele and Brezzi, Franco and Fortin, Michel and others},
+  volume={44},
+  year={2013},
+  publisher={Springer}
+}
+
+@article{brezzi1985two,
+  title={Two families of mixed finite elements for second order elliptic problems},
+  author={Brezzi, Franco and Douglas Jr, Jim and Marini, L Donatella},
+  journal={Numerische Mathematik},
+  volume={47},
+  number={2},
+  pages={217--235},
+  year={1985},
+  publisher={Springer}
+}
+
+@article{ye2016discontinuous,
+  title={{A discontinuous Galerkin method with a modified penalty flux for the propagation and scattering of acousto-elastic waves}},
+  author={Ye, Ruichao and de Hoop, Maarten V and Petrovitch, Christopher L and Pyrak-Nolte, Laura J and Wilcox, Lucas C},
+  journal={Geophysical Journal International},
+  volume={205},
+  number={2},
+  pages={1267--1289},
+  year={2016},
+  publisher={Oxford University Press}
+}
+
+@misc{simpletracker,
+title={A simple multiple particle tracker with gap closing.},
+howpublished={\url{https://www.mathworks.com/matlabcentral/fileexchange/34040-simple-tracker}},
+note={Accessed 10/1/2016}
+}
+
 @article{hughes2014finite,
   title={{Finite element and NURBS approximations of eigenvalue, boundary-value, and initial-value problems}},
   author={Hughes, Thomas JR and Evans, John A and Reali, Alessandro},
