--- a/docs/dg_penalty/dgpenalty.bib
+++ b/docs/dg_penalty/dgpenalty.bib
@@ -1,3 +1,10 @@
+@book{horn2012matrix,
+  title={Matrix analysis},
+  author={Horn, Roger A and Johnson, Charles R},
+  year={2012},
+  publisher={Cambridge university press}
+}
+
 @article{kirby2004algorithm,
   title={{Algorithm 839: FIAT, a new paradigm for computing finite element basis functions}},
   author={Kirby, Robert C},
@@ -437,11 +444,15 @@ publisher={Elsevier}
   journal={arXiv preprint arXiv:1512.06025},
   year={2015}
 }
+
 @article{chan2015gpu,
-  title={{GPU}-accelerated discontinuous {G}alerkin methods on hybrid meshes},
+  title={{GPU-accelerated discontinuous Galerkin methods on hybrid meshes}},
   author={Chan, Jesse and Wang, Zheng and Modave, Axel and Remacle, Jean-Francois and Warburton, T},
-  journal={arXiv preprint arXiv:1507.02557},
-  year={2015}
+  journal={Journal of Computational Physics},
+  volume={318},
+  pages={142--168},
+  year={2016},
+  publisher={Academic Press}
 }
 
 @book{ipsen2009numerical,
